--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,14 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    div{
+      font-family: Lato,Arial,sans-serif;
+      font-size: 14px;
+      font-weight:400;
+      line-height: 1.4;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
